--- a/package.json
+++ b/package.json
@@ -9,12 +9,19 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "firebase": "^8.2.9",
+    
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+
     "react-scripts": "4.0.3",
     "styled-components": "^5.2.1",
     "tools": "^0.0.0",
     "web-vitals": "^1.0.1"
+  },
+
+  "resolutions": {
+    "**/react": "17.0.1",
+    "**/react-dom": "17.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
